# brockers_dpf

./: README.md  consumer.py  observer.py  pyproject.toml
.githab/workflows/: python.yml
.github/workflows/: main.yml  python.yml  python2.yml
framework/internal/: singleton.py
framework/internal/http/: account.py  mail.py
framework/internal/kafka/: producer.py
src/brockers_dpf/framework/helpers/kafka/consumers/: register_events.py  register_events_errors.py
src/brockers_dpf/framework/helpers/rmq/consumers/: dm_mail_sending.py
src/brockers_dpf/framework/internal/: singleton.py
src/brockers_dpf/framework/internal/kafka/: consumer.py  producer.py  subscriber.py
src/brockers_dpf/framework/internal/rmq/: consumer.py  publisher.py
tests/: conftest.py  test_registration.py
