[project]
name = "brockers-dpf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "kafka-python (>=2.3.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "brockers_dpf", from = "src"}]

[tool.poetry.dependencies]
account = {path = "framework/internal/http/account", develop = true}
mail = {path = "framework/internal/http/mail", develop = true}
producer = {path = "framework/internal/kafka/producer", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
